# zensweeper

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: pages.yml
src/: board.rs  cell.rs  input.rs  lib.rs  main.rs  render.rs  settings.rs  solver.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
