[package]
name = "minesweeper"
version = "0.1.0"
edition = "2024"

[lib]
name = "minesweeper"
path = "src/lib.rs"

[[bin]]
name = "minesweeper"
path = "src/main.rs"

[dependencies]
rand = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29"

[workspace]
members = [".", "web"]
